<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Titan Music Player</string>
    <string name="action_settings">Settings</string>
    <string name="no_songs">No Songs</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Skip Forward</string>
    <string name="previous">Skip Back</string>
    <string name="empty_queue">No Songs In Queue</string>
    <string name="browse_artists">Browse Artists</string>
    <string name="browse_playlists">Browse Playlists</string>
    <string name="browse_albums">Browse Albums</string>
    <string name="title_activity_browse_library">Browse Library</string>
    <string name="library">Library</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="remove_song">Remove Song</string>
    <string name="add_song_to_queue">Add Song to Queue</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="cant_delete_queue">Can\'t delete the now playing queue playlist.</string>
    <string name="new_playlist">New Playlist</string>
    <string name="email_song">Email Song</string>
    <string name="store">Store</string>
    <string name="buy_music">Buy Music</string>
    <string name="store_url">https://angel.spcollege.edu/AngelUploads/Content/COP2660_4492_0475/_assoc/2CF4D45C3AC9447EA440849269FC0814/music_store/index.html</string>
    <string name="song_added_to_queue">Song has been added to Queue</string>
    <string name="songs_added_to_queue">Songs have been added to Queue</string>
    
    
</resources>
