<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_browse_library"
        android:showAsAction="always"
    	android:icon="@drawable/playlists" 
    	android:title="@string/library"/>
    <item
        android:id="@+id/action_browse_artists"
        android:orderInCategory="100"
        android:showAsAction="always"
    	android:icon="@drawable/artists" 
        android:title="@string/artists"/>
    <item
        android:id="@+id/action_browse_albums"
        android:orderInCategory="100"
        android:showAsAction="always"
    	android:icon="@drawable/albums" 
        android:title="@string/albums"/>
    <item
        android:id="@+id/action_browse_playlists"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
    	android:icon="@drawable/playlists" 
        android:title="@string/playlists"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>